automatically target refresh page before switching to it

--- a/www/templates/book.html
+++ b/www/templates/book.html
@@ -95,5 +95,7 @@
       localStorage['fly_from'] = input_from;
       localStorage['fly_to'] = input_to;
       localStorage['fly_passengers'] = input_passengers;
+      window.location='index.html#/page6'
+      window.location.reload();
     }
 </script>
