adiconei fotetas, o pagamento, comentei os checks do mail

--- a/www/templates/criarConta.html
+++ b/www/templates/criarConta.html
@@ -38,12 +38,12 @@
   }
 
   function isValidPhone(phone) {
-    var re = /9[1236][0-9]{7}|2[1-9][0-9]{7}/;
+    //var re = /9[1236][0-9]{7}|2[1-9][0-9]{7}/;
     return re.test(phone);;
   }
 
   function isValidEmail(email) {
-    var re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+    //var re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
     return re.test(email);
   }
 
