--- a/www/templates/favorites.html
+++ b/www/templates/favorites.html
@@ -54,20 +54,20 @@
           <img id="thumbnail" src="img/HutWGo5IRCupJxmDu4dv_madeira.jpeg">
           <i id="icon" class="icon ion-ios-heart" onclick="changeIcon(this)"></i>
         <h3>From: Paris, France</h3>
-        <h3>To: Paris, France</h3>
+        <h3>To: Angola, Madagascar</h3>
         <button id="buy-button" onclick="visitPage();">Buy</button>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="favorites-list-item11"">
         <img id="thumbnail" src="img/HutWGo5IRCupJxmDu4dv_madeira.jpeg">
         <i id="icon" class="ion-ios-heart" onclick="changeIcon(this)"></i>
-        <h3>From: Madrid, Spain</h3>
+        <h3>From: Legoland, Saturno</h3>
         <h3>To: Madrid, Spain</h3>
         <button id="buy-button" onclick="visitPage();">Buy</button>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="favorites-list-item12"">
         <img id="thumbnail" src="img/HutWGo5IRCupJxmDu4dv_madeira.jpeg">
         <i id="icon" class="ion-ios-heart" onclick="changeIcon(this)"></i>
-        <h3>From: Warsaw, Poland</h3>
+        <h3>From: Velhice, Swagland</h3>
         <h3>To: Warsaw, Poland</h3>
         <button id="buy-button" onclick="visitPage();">Buy</button>
       </ion-item>
