kinda existe o pagamento

--- a/www/templates/pagamento.html
+++ b/www/templates/pagamento.html
@@ -1,28 +1,25 @@
-<ion-view title="pagamento" hide-nav-bar="true" id="page4">
+<ion-view title="pagamento" hide-nav-bar="true" id="page11">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
-    <h4 id="pagamento-heading1" style="color:#000000;">Método de Pagamento</h4>
+    <h4 id="pagamento-heading1" style="color:#000000; margin-top: 50px;">Método de Pagamento</h4>
     <div class="list card" id="pagamento-card21">
       <ion-item class="item-avatar" id="pagamento-list-item10">
         <img src="img/lF3Zj4txRAy3iMwxT5DT_americanexpress-credit-debit-card-bank-transaction-32287.webp">
         <h2>Joaquina Nogueira</h2>
         <p>xxxx xxxx xxxx xxxx 6133</p>
-        <ion-option-button class="button-dark">hh</ion-option-button>
       </ion-item>
       <ion-item class="item-avatar" id="pagamento-list-item17">
         <img src="img/asHFywhTym0Xzz1qAEAC_transferir1.png">
         <h2>Joaquina Nogueira</h2>
         <p>9011 xxxx xxxx xxxx xx</p>
-        <ion-option-button class="button-dark">hh</ion-option-button>
       </ion-item>
       <ion-item class="item-avatar" id="pagamento-list-item18">
         <img src="img/I8lbAChRTOiz0pW7Etg7_mastercard-credit-debit-card-bank-transaction-32303.webp">
         <h2>José Cid Nogueira</h2>
         <p>4231 xxxx xxxx xxxx xx</p>
-        <ion-option-button class="button-dark">hh</ion-option-button>
       </ion-item>
     </div>
     <div id="pagamento-button-bar1" class="button-bar"></div>
-    <h4 id="pagamento-heading2" style="color:#000000;">Adcionar método de pagamento</h4>
+    <h4 id="pagamento-heading2" style="color:#000000;">Adicionar método de pagamento</h4>
     <ion-list id="pagamento-list1">
       <ion-item class="item-icon-left item-icon-right" id="pagamento-list-item12">
         <i class="icon ion-card"></i>Cartão
@@ -35,5 +32,6 @@
     </ion-list>
     <h4 id="pagamento-heading4" style="color:#000000;">Confirmar e Pagar</h4>
     <button id="pagamento-button8" style="font-weight:500;border-radius:1px 1px 1px 1px;" class="button button-balanced button-block button-outline">Total 45€</button>
+    <button href="index.html#/page1/page6" id="cancel0" class="button button-stable button-block">Cancel</button>                                                                            
   </ion-content>
 </ion-view>
