vamos porto garalho

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -14,7 +14,7 @@
     </form>
     <a id="login-button14" class="button button-positive button-block" onclick="login()">Login</a>
     <div id="login-markdown1" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#000000;"><a href="index.html#/page1/page9">Sign up now </a>• <a href="index.html#/page1/page11">Forgot Password </a> </p>
+      <p style="color:#000000;"><a href="index.html#/page1/page9">Sign up now </a>• <a href="#">Forgot Password </a> </p>
   </ion-content>
 </ion-view>
 
