--- a/www/templates/pagamento.html
+++ b/www/templates/pagamento.html
@@ -1,4 +1,4 @@
-<ion-view title="pagamento" hide-nav-bar="true" id="page11">
+<ion-view id="page12">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
     <h4 id="pagamento-heading1" style="color:#000000; margin-top: 50px;">Método de Pagamento</h4>
     <div class="list card" id="pagamento-card21">
@@ -32,6 +32,6 @@
     </ion-list>
     <h4 id="pagamento-heading4" style="color:#000000;">Confirmar e Pagar</h4>
     <button id="pagamento-button8" style="font-weight:500;border-radius:1px 1px 1px 1px;" class="button button-balanced button-block button-outline">Total 45€</button>
-    <button href="index.html#/page1/page6" id="cancel0" class="button button-stable button-block">Cancel</button>                                                                            
+    <button ui-sref="tabsController.login()" id="criarConta-button120" class="button button-stable button-block">Cancel</button>                                                                  
   </ion-content>
 </ion-view>
