pagamento.html working, buy button searchflight working

--- a/www/templates/favorites.html
+++ b/www/templates/favorites.html
@@ -80,6 +80,6 @@ function changeIcon(x) {
 }
 
 function visitPage(){
-        window.location='index.html#/page1/page12';
+        window.location='index.html#/page6';
     }
 </script>
