--- a/www/templates/pagamento.html
+++ b/www/templates/pagamento.html
@@ -1,6 +1,6 @@
 <ion-view id="page12">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
-    <h4 id="pagamento-heading1" style="color:#000000; margin-top: 50px;">Método de Pagamento</h4>
+    <h4 id="pagamento-heading1" style="color:#000000;">Método de Pagamento</h4>
     <div class="list card" id="pagamento-card21">
       <ion-item class="item-avatar" id="pagamento-list-item10">
         <img src="img/lF3Zj4txRAy3iMwxT5DT_americanexpress-credit-debit-card-bank-transaction-32287.webp">
