--- a/www/templates/searchFlight.html
+++ b/www/templates/searchFlight.html
@@ -362,6 +362,7 @@
           document.getElementById("modal_return").innerHTML = "Arrival: " +  document.getElementById("return1").innerHTML;
           document.getElementById("modal_price").innerHTML = "Price: " +  document.getElementById("price1").innerHTML;
           document.getElementById("modal_seats").innerHTML = "Available seats: " + seats[0];
+          localStorage['price'] = document.getElementById("price1").innerHTML;
           break;
         case 2:
           document.getElementById("logo0").src = "img/Transavia_logo.svg.png"
@@ -370,6 +371,7 @@
           document.getElementById("modal_return").innerHTML = "Arrival: " +  document.getElementById("return2").innerHTML;
           document.getElementById("modal_price").innerHTML = "Price: " +  document.getElementById("price2").innerHTML;
           document.getElementById("modal_seats").innerHTML = "Available seats: " + seats[1];
+          localStorage['price'] = document.getElementById("price2").innerHTML;
           break;
         case 3:
           document.getElementById("logo0").src = "img/tap.png"
@@ -378,6 +380,7 @@
           document.getElementById("modal_return").innerHTML = "Arrival: " +  document.getElementById("return3").innerHTML;
           document.getElementById("modal_price").innerHTML = "Price: " +  document.getElementById("price3").innerHTML;
           document.getElementById("modal_seats").innerHTML = "Available seats: " + seats[2];
+          localStorage['price'] = document.getElementById("price3").innerHTML;
           break;
         case 4:
           document.getElementById("logo0").src = "img/easy.png"
@@ -386,6 +389,7 @@
           document.getElementById("modal_return").innerHTML = "Arrival: " +  document.getElementById("return4").innerHTML;
           document.getElementById("modal_price").innerHTML = "Price: " +  document.getElementById("price4").innerHTML;
           document.getElementById("modal_seats").innerHTML = "Available seats: " + seats[3];
+          localStorage['price'] = document.getElementById("price4").innerHTML;
           break;
         case 5:
           document.getElementById("logo0").src = "img/easy.png"
@@ -394,6 +398,7 @@
           document.getElementById("modal_return").innerHTML = "Arrival: " +  document.getElementById("return5").innerHTML;
           document.getElementById("modal_price").innerHTML = "Price: " +  document.getElementById("price5").innerHTML;
           document.getElementById("modal_seats").innerHTML = "Available seats: " + seats[4];
+          localStorage['price'] = document.getElementById("price5").innerHTML;
           break;
         case 6:
           document.getElementById("logo0").src = "img/vuelling.png"
@@ -402,6 +407,7 @@
           document.getElementById("modal_return").innerHTML = "Arrival: " +  document.getElementById("return6").innerHTML;
           document.getElementById("modal_price").innerHTML = "Price: " +  document.getElementById("price6").innerHTML;
           document.getElementById("modal_seats").innerHTML = "Available seats: " + seats[5];
+          localStorage['price'] = document.getElementById("price6").innerHTML;
           break;
       }
     }
